--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@11ty/eleventy": "^0.11.0"
   },
   "dependencies": {
+    "netlify-cli": "^2.61.2",
     "node-fetch": "^2.6.0"
   },
   "repository": {
